altitude/styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Contrail+One&family=Montserrat&display=swap");

:root {
  /* change the values below to your colors from your palette */
  --primary-color: #082945;
  --secondary-color: #d3d5d6;
  --accent1-color: #b1b3b6;
  --accent2-color: #3d6a91;

  /* change the values below to your chosen font(s) */
  --heading-font: "Contrail One";
  --paragraph-font: Montserrat, Helvetica, sans-serif;

  /* these colors below should be chosen from among your palette colors above */
  --headline-color-on-white: #082945; /* headlines on a white background */
  --headline-color-on-color: white; /* headlines on a colored background */
  --paragraph-color-on-white: #082945; /* paragraph text on a white background */
  --paragraph-color-on-color: white; /* paragraph text on a colored background */
  --paragraph-background-color: #b1b3b6;
  --nav-link-color: #d3d5d6;
  --nav-background-color: #082945;
  --nav-hover-link-color: #b1b3b6;
  --nav-hover-background-color: #396e94;
}

* {
  box-sizing: border-box;
}

#content {
  max-width: 1600px;
  margin: 0 auto;
  background-color: #082945;
  font-size: 20px;
  color: #d3d5d6;
  font-family: Montserrat, Helvetica, sans-serif;
}
body {
  background-color: #082945;
  margin: 0;
  padding: 0;
}
h1 {
  color: #d3d5d6;
  font-family: "Contrail One";
  font-size: 2em;
}

.nav_bar_grid {
  background-color: #b1b3b6;
  width: 100%;
  height: 120px;
  display: grid;
  grid-template-columns: 100px auto 30px 30px;
  grid-template-rows: 20px 5px 40px;
  padding: 5px;
}
.contact_us {
  padding: 5px;
  font-size: 15px;
  color: #082945;
  grid-column: 1/2;
  grid-row: 1/2;
  justify-self: start;
  align-self: start;
  text-decoration: none;
}
#top_fb {
  grid-column: 3/4;
  grid-row: 1/2;
}
#top_ig {
  grid-column: 4/5;
  grid-row: 1/2;
}
#seperator {
  grid-column: 1/5;
  grid-row: 2/3;
}
.logo {
  grid-column: 1/2;
  grid-row: 3/4;
  margin-left: 3px;
  text-align: left;
  margin: 10px 0;
}
nav {
  display: grid;
  grid-template-columns: 10px 150px 175px 150px auto;
  grid-template-rows: auto;
  margin: 30px;
}
#home {
  grid-column: 2/3;
  margin-top: 40px;
}
#coaches {
  grid-column: 3/4;
  margin-top: 40px;
}
#merchandise {
  grid-column: 4/5;
  margin-top: 40px;
}
nav a {
  margin: 1em;
  grid-column: 2/3;
  grid-row: 3/4;
  color: #082945;
  text-decoration: none;
  font-size: 25px;
}
nav a:hover {
  background-color: #d3d5d6;
  color: #082945;
}
/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: 50px auto 0px auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #b1b3b6;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active,
.dot:hover {
  background-color: #6f7072;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

#club_info_grid {
  box-sizing: border-box;
  padding: 3%;
  margin: 0px auto;
  width: 100%;
  display: grid;
  grid-template-columns: 2fr 1fr 2fr;
  grid-template-rows: 2em 1fr 2em 1fr 2em 1fr 2em 1fr 2em 0.5fr;
  gap: 2em;
}
#about_us_image,
#growth_image,
#multi_sport_athletes_image,
#run_by_volunteers_image {
  padding: 0;
  border: 10px solid #b1b3b6;
  box-shadow: 5px 5px 5px #717171;
  width: 100%;
}
#about_us_title,
#about_us_text,
#growth_title,
#growth_text,
#multi_sport_athletes_title,
#multi_sport_athletes_text,
#run_by_volunteers_title,
#run_by_volunteers_text,
#our_mission_statement_title,
#our_mission_statement_text {
  width: 100%;
}

#about_us_title {
  grid-column: 1/2;
  grid-row: 1/2;
}
#about_us_text {
  grid-column: 1/3;
  grid-row: 2/3;
}
#about_us_image {
  grid-column: 3/4;
  grid-row: 2/3;
}
#growth_image {
  grid-column: 1/2;
  grid-row: 4/5;
}
#growth_title {
  grid-column: 2/3;
  grid-row: 3/4;
}
#growth_text {
  grid-column: 2/4;
  grid-row: 4/5;
}
#multi_sport_athletes_title {
  grid-column: 1/2;
  grid-row: 5/6;
}
#multi_sport_athletes_text {
  grid-column: 1/3;
  grid-row: 6/7;
}
#multi_sport_athletes_image {
  grid-column: 3/4;
  grid-row: 6/7;
}
#run_by_volunteers_image {
  grid-column: 1/2;
  grid-row: 8/9;
}
#run_by_volunteers_title {
  grid-column: 2/4;
  grid-row: 7/8;
}
#run_by_volunteers_text {
  grid-column: 2/4;
  grid-row: 8/9;
}
#our_mission_statement_title {
  grid-column: 1/2;
  grid-row: 9/10;
}
#our_mission_statement_text {
  grid-column: 1/4;
  grid-row: 10/11;
}
footer {
  background-color: #b1b3b6;
  color: #155a7a;
  padding: 10px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
footer a {
  color: #3d6a91;
  text-decoration: none;
}
footer a:hover {
  background-color: #d3d5d6;
}
footer p {
  font-size: 1em;
}
footer p a:hover {
  text-decoration: underline;
}
footer .social img {
  padding: 10px;
}
.icon {
  width: 80px;
  padding-top: 10px;
}

/*Merchandise Page*/

.altitude_gear_heading {
  width: 100%;
  padding: 60px 0 30px 60px;
}

.flex-container {
  width: 100%;
  margin:0 auto;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
}
.flex-item {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 320px;
  justify-content: flex-start;
  display: flex;
 padding-left: 20px;
}

.flex-item img {
  cursor: pointer;
}
figcaption {
  text-align: center;
}
figcaption a {
  color: #b1b3b6;
  text-decoration: none;
}
figcaption a:hover {
  background-color: #d3d5d6;
  color: #082945;
}

/*Contact Us page*/

form {
  /* Center the form on the page */
  margin: 100px auto;
  width: 600px;
  /* Form outline */
  padding: 1em;
  border: 1px solid #ccc;
  border-radius: 1em;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

form li + li {
  margin-top: 1em;
}

label {
  /* Uniform size & alignment */
  display: inline-block;
  width: 90px;
  text-align: right;
}

input,
textarea {
  /* To make sure that all text fields have the same font settings
By default, textareas have a monospace font */
  font: 1em sans-serif;

  /* Uniform text field size */
  width: 450px;
  box-sizing: border-box;

  /* Match form field borders */
  border: 1px solid #999;
}

input:focus,
textarea:focus {
  /* Additional highlight for focused elements */
  border-color: #000;
}

textarea {
  /* Align multiline text fields with their labels */
  vertical-align: top;

  /* Provide space to type some text */
  height: 10em;
}

.button {
  /* Align buttons with the text fields */
  padding-left: 90px; /* same size as the label elements */
}

button {
  /* This extra margin represent roughly the same space as the space
between the labels and their text fields */
  margin-left: 0.5em;
}
#feedback {
  background-color: #082945;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  padding: 0.5em;
  /* make this element invisible until we are ready for it */
  display: none;
}
.moveDown {
  margin-top: 3em;
}
/*nav bar for small screeens */
.topnav {
  background-color: #b1b3b6;
  overflow: hidden;
}
.topnav a {
  float: left;
  display: block;
  color: #082945;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}
.topnav a:hover {
  background-color: #d3d5d6;
  color: #082945;
}

.topnav a.active {
  background-color: #082945;
  color: #d3d5d6;
}
.topnav .icon {
  display: none;
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

@media screen and (max-width: 900px) {
  nav a,
  footer {
    flex-direction: column;
    font-size: 0.75em;
    width: 100%;
  }
  nav {
    display: block;
    padding-top: 0.55em;
  }
  #home,
  #coaches,
  #merchandise {
    display: block;
    padding: 1px;
    margin: 0px;
  }
  .dot {
    height: 10px;
    width: 10px;
  }
  #club_info_grid {
    display: block;
    width: 100%;
  }
  footer {
    margin-top: 25px;
  }
  #about_us_image,
  #growth_image,
  #multi_sport_athletes_image,
  #run_by_volunteers_image {
    display: block;
    width: 100%;
  }
}

/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) 
@media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}*/
/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) 
@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}
*/

